--- a/index.Rmd
+++ b/index.Rmd
@@ -6,6 +6,6 @@
 
 
 
-<a href="wine_worldmap.html"><img border="0" alt="wine" src="wine_numbers_world_final_square.png" width="250" height="250"> <a href="wine_worldmap.html"><img border="0" alt="wine" src="wine_numbers_world_final_square.png" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine_numbers_europe_final.png" width="250" height="250">
+<a href="wine_worldmap.html"><img border="0" alt="wine" src="wine_numbers_world_final_square.png" width="250" height="250"> <a href="wine_treemap.html"><img border="0" alt="wine" src="treemap_wines_final_square.png" width="250" height="250"> <a href="wine_europemap.html"><img border="0" alt="wine" src="wine_numbers_europe_final.png" width="250" height="250">
 
 <a href="newpage.html"><img border="0" alt="wine" src="wine_white_big1x1.png" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250">
