--- a/index.Rmd
+++ b/index.Rmd
@@ -2,10 +2,14 @@
 
 ---
 
-<img border="0" alt="wine" src="R4tummies.png" width="800" height="100">
+<img border="0" alt="wine" src="R4tummies.png" width="798" height="100">
+
+<a href="wine_worldmap.html"><img style="margin:12px 12px 12px 12px" alt="map" src="wine_numbers_world_final_square.png" width="250" height="250"> <a href="wine_treemap.html"><img border="0" alt="treemap" src="treemap_wines_final_square.png" width="250" height="250"> <a href="wine_europemap.html"><img style="margin:12px 12px 12px 12px" alt="map" src="wine_numbers_europe_final.png" width="250" height="250">
 
 
+<a href="price_white.html"><img style="margin:12px 12px 12px 12px" alt="wordcloud" src="price_wine_white_square.png" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250"> <a href="price_red.html"><img style="margin:12px 12px 12px 12px" alt="wine" src="price_wine_red_square.png" width="250" height="250">
 
-<a href="wine_worldmap.html"><img border="0" alt="wine" src="wine_numbers_world_final_square.png" width="250" height="250"> <a href="wine_treemap.html"><img border="0" alt="wine" src="treemap_wines_final_square.png" width="250" height="250"> <a href="wine_europemap.html"><img border="0" alt="wine" src="wine_numbers_europe_final.png" width="250" height="250">
 
-<a href="newpage.html"><img border="0" alt="wine" src="wine_white_big1x1.png" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250">
+<a href="wordcloud_white.html"><img style="margin:12px 12px 12px 12px" alt="wordcloud" src="wordcloud_white_square.png" width="250" height="250"> <a href="newpage.html"><img border="0" alt="wine" src="wine.jpg" width="250" height="250"> <a href="wordcloud_red.html"><img style="margin:12px 12px 12px 12px" alt="wine" src="wordcloud_red_square.png" width="250" height="250">
+
+
