--- a/price_red.Rmd
+++ b/price_red.Rmd
@@ -6,4 +6,4 @@
 <br>
 
 
-<img border="0" alt="map" src="price_wine_red.png" width="600" height="400"><img border="0" alt="text" src="text1.png" width="200" height="400">
+<img border="0" alt="map" src="price_wine_red.png" width="600" height="400"><img style="margin:20px 20px 20px 20px" alt="text" src="text2.3.png" width="200" height="400">
